@startuml

title __CONTEXT's Class Diagram__\n

  namespace org.simonworks.projects.context {
    abstract class org.simonworks.projects.context.AbstractBeanContext {
        - id : String
        - name : String
        + AbstractApplicationContext()
        + AbstractApplicationContext()
        + getId()
        + getName()
        + setBeanFactory()
        + setBeanRegistryProvider()
        + setSingletonsCache()
        # getBeanFactory()
        # getBeanRegistry()
        # getSingletonsCache()
    }
  }
  

  namespace org.simonworks.projects.context {
    interface org.simonworks.projects.context.BeanContext {
        {abstract} + getBean()
        {abstract} + getId()
        {abstract} + getName()
        + getParent()
        {abstract} + setBeanFactory()
        {abstract} + setBeanRegistryProvider()
        {abstract} + setSingletonsCache()
    }
  }
  

  namespace org.simonworks.projects.context {
    class org.simonworks.projects.context.BeanInfo {
        - beanClass : Class<?>
        - dependencies : Map<Field, String>
        - name : String
        + getBeanClass()
        + getDependencies()
        + getLifecycle()
        + getName()
        + setLifecycle()
        + toString()
        ~ BeanInfo()
        ~ BeanInfo()
    }
  }
  

  namespace org.simonworks.projects.context {
    enum Lifecycle {
      PROTOTYPE
      SINGLETON
    }
  }
  

  namespace org.simonworks.projects.context {
    interface org.simonworks.projects.context.BeanRegistry {
        {static} + LOGGER : Logger
        + checkDependencies()
        + determineBeanName()
        + getAnnotatedBeanName()
        {abstract} + getBeanInfo()
        + isScopedClass()
        + readLifecycle()
        {abstract} + registerBean()
        + registerBean()
        + registerBean()
        {abstract} + unregisterBean()
    }
  }
  

  namespace org.simonworks.projects.context {
    interface org.simonworks.projects.context.BeanRegistryProvider {
        {abstract} + loadBeanRegistry()
    }
  }
  

  namespace org.simonworks.projects.context {
    class org.simonworks.projects.context.ClassUtils {
        {static} - LOGGER : Logger
        {static} + getClasses()
        {static} - findClasses()
    }
  }
  

  namespace org.simonworks.projects.context {
    class org.simonworks.projects.context.AbstractClasspathBeanRegistryProvider {
        {static} - LOGGER : Logger
        - packagesToScan : List<String>
        + addPackageToScan()
        + loadBeanRegistry()
    }
  }
  

  namespace org.simonworks.projects.context {
    class org.simonworks.projects.context.DefaultBeanContextImpl {
        {static} - LOGGER : Logger
        + DefaultApplicationContext()
        + DefaultApplicationContext()
        + getBean()
        - fillDependencies()
    }
  }
  

  namespace org.simonworks.projects.context {
    class org.simonworks.projects.context.MapBeanRegistry {
        {static} - LOGGER : Logger
        - registry : Map<String, BeanInfo>
        + getBeanInfo()
        + registerBean()
        + toString()
        + unregisterBean()
    }
  }
  

  namespace org.simonworks.projects.context {
    class org.simonworks.projects.context.DefaultSingletonsCache {
        - cache : Map<String, Object>
        + get()
        + put()
    }
  }
  

  namespace org.simonworks.projects.context {
    interface org.simonworks.projects.context.SingletonsCache {
        {abstract} + get()
        {abstract} + put()
    }
  }
  

  org.simonworks.projects.context.AbstractBeanContext .up.|> org.simonworks.projects.context.BeanContext
  org.simonworks.projects.context.AbstractBeanContext o-- org.simonworks.projects.factory.BeanFactory : beanFactory
  org.simonworks.projects.context.AbstractBeanContext o-- org.simonworks.projects.context.BeanRegistry : beanRegistry
  org.simonworks.projects.context.AbstractBeanContext o-- org.simonworks.projects.context.SingletonsCache : singletonsCache
  org.simonworks.projects.context.BeanInfo o-- org.simonworks.projects.context.BeanInfo.Lifecycle : lifecycle
  org.simonworks.projects.context.BeanInfo +-down- org.simonworks.projects.context.BeanInfo.Lifecycle
  org.simonworks.projects.context.AbstractClasspathBeanRegistryProvider .up.|> org.simonworks.projects.context.BeanRegistryProvider
  org.simonworks.projects.context.DefaultBeanContextImpl -up-|> org.simonworks.projects.context.AbstractBeanContext
  org.simonworks.projects.context.MapBeanRegistry .up.|> org.simonworks.projects.context.BeanRegistry
  org.simonworks.projects.context.DefaultSingletonsCache .up.|> org.simonworks.projects.context.SingletonsCache


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
